Fix input text in react-select field being too dark

--- a/src/assets/scss/components/_entryForm.scss
+++ b/src/assets/scss/components/_entryForm.scss
@@ -56,6 +56,9 @@
             &__value-container {
                 padding: 0;
             }
+            &__input {
+                color: #cccccc;
+            }
             &__menu {
                 background-color: #465059;
             }
